# mucosa_area

./: .gitignore  README.md  pyproject.toml  requrements.txt
src/: pipeline.ipynb
src/algorithms/: average_width.py  find_contour.py
src/algorithms/unfold/: skeleton.py  spline.py
src/core/: figure.py
src/utils/: save.py
