[project]
name = "MucosaArea"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "dsepruning",
    "ipykernel==6.29.5",
    "numpy==2.0.2",
    "scikit-image==0.24.0",
    "scikit-learn==1.6.1",
    "scipy==1.13.1",
    "simpleitk==2.3.0",
    "skan==0.12.2",
    "vtk==9.2.6",
]

[tool.uv.sources]
dsepruning = { git = "https://github.com/glebsolyanik/DSE-skeleton-pruning-fork.git" }
